--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "react": "^18.2.0",
+    "react-circular-input": "^0.2.4",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-pattern-lock": "^12.0.12",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
