--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.10.0",
+    "@mui/material": "^5.10.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "buffer": "^6.0.3",
+    "graphic-pwd": "^1.0.16",
+    "patch-package": "^6.4.7",
     "react": "^18.2.0",
     "react-circular-input": "^0.2.4",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-image-puzzle": "^0.1.1",
+    "react-languages-select": "^1.0.20",
     "react-pattern-lock": "^12.0.12",
     "react-scripts": "5.0.1",
+    "sha.js": "^2.4.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
