--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "buffer": "^6.0.3",
-    "graphic-pwd": "^1.0.16",
     "jquery": "^3.6.0",
     "patch-package": "^6.4.7",
     "react": "^18.2.0",
     "react-circular-input": "^0.2.4",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
-    "react-image-puzzle": "^0.1.1",
+    "react-image-puzzle": "^0.1.0",
     "react-languages-select": "^1.0.20",
     "react-pattern-lock": "^12.0.12",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "sha.js": "^2.4.11",
     "web-vitals": "^2.1.4"
   },
